subselect.result, subselect.test:   Added a test case for bug #9338. sql_select.cc:   Fixed bug #9338.   When an occurence of a field reference has to be replaced   by another field reference the whole Item_field must be   replaced. item.cc:   Fixed bug #9338.   The method Item_field::replace_equal_field_processor was   replaced by Item_field::replace_equal_field. The new method   is used to replace the occurences of Item_field objects. item.h:   Fixed bug #9338.   The virtual function replace_equal_field_processor was replaced   by replace_equal_field. The latter is supposed to be used as a   callback function in calls of the method transform.